[package]
name = "mergui"
description = "A simple GUI system for use with the quicksilver game engine"
version = "0.0.4-alpha.0"
authors = ["lenscas <lenscas@gmail.com>"]
categories = ["gui"]
edition = "2018"
keywords = ["game", "gui", "quicksilver", "gamedev"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lenscas/mergui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3.0"
quicksilver = "^0.3.20"
