[package]
name = "mergui"
description = "A simple GUI system for use with the quicksilver game engine"
version = "0.1.0-alpha0.2"
authors = ["lenscas <lenscas@gmail.com>"]
categories = ["gui"]
edition = "2018"
keywords = ["game", "gui", "quicksilver", "gamedev"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/lenscas/mergui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stdweb = ["quicksilver/stdweb"]
# web-sys= ["quicksilver/web-sys"]

[dependencies]
indexmap = "1.3.2"
quicksilver = {version="0.4.0-alpha0.4", default-features=false, features=["ttf","font"]}
unicode-normalization = "0.1.12"
